# routes/web.php
@@ -24,6 +24,7 @@ Route::get('/', 'Auth\LoginController@home');
 //Route::post('api/item/{id}', 'ItemController@update');
 //Route::delete('api/item/{id}', 'ItemController@delete');
 
+Route::get('api/post/feed/{type_feed}', 'PostController@feed');
 Route::post('api/post', 'PostController@create');
 Route::post('api/post/{id}', 'PostController@delete');
 
